add all the f1 circuits pages and assets

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
     </main>
     <footer>
-        <p>Created by: <a href=""></a></p>
+        <p>Created by: <a href="https://piemh.github.io/PersonalSite/">Pietro Dondi</a></p>
     </footer>
     <script src="main.js"></script>
 </body>
