fix assets 404 localization error

--- a/circuits/AlbertPark.html
+++ b/circuits/AlbertPark.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8">
     <title>Australia</title>
-    <link rel="stylesheet" href="circuit.css">
+    <link rel="stylesheet" href="circuits/circuit.css">
 </head>
 <body>
     <h1>Albert Park Circuit</h1>
     <div class="CircuitSlot">
-        <img class="flag" src="../assets/img/Flag_of_Australia.png" alt="Australia Flag">
+        <img class="flag" src="assets/img/Flag_of_Australia.png" alt="Australia Flag">
         <button class="buttons"><a href="https://en.wikipedia.org/wiki/Albert_Park_Circuit">Wikipedia</a></button>
         <button class="buttons"><a href="https://fastestlaps.com/tracks/albert-park">fastestlaps</a></button>
     </div>
