--- a/circuits/Bahrain.html
+++ b/circuits/Bahrain.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8">
     <title>Bahrain</title>
-    <link rel="stylesheet" href="circuit.css">
+    <link rel="stylesheet" href="circuits/circuit.css">
 </head>
 <body>
     <h1>Bahrain International Circuit</h1>
     <div class="CircuitSlot">
-        <img class="flag" src="../assets/img/Flag_of_Bahrain.png" alt="Bahrain Flag">
+        <img class="flag" src="assets/img/Flag_of_Bahrain.png" alt="Bahrain Flag">
         <button class="buttons"><a href="https://en.wikipedia.org/wiki/Bahrain_International_Circuit">Wikipedia</a></button>
         <button class="buttons"><a href="https://fastestlaps.com/tracks/bahrain-international-circuit">fastestlaps</a></button>
     </div>
