--- a/circuits/Barcelona.html
+++ b/circuits/Barcelona.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8">
     <title>Barcelona</title>
-    <link rel="stylesheet" href="circuit.css">
+    <link rel="stylesheet" href="circuits/circuit.css">
 </head>
 <body>
 <h1>Circuit de Barcelona-Catalunya</h1>
 <div class="CircuitSlot">
-    <img class="flag" src="../assets/img/Flag_of_Spain.png" alt="Spain Flag">
+    <img class="flag" src="assets/img/Flag_of_Spain.png" alt="Spain Flag">
     <button class="buttons"><a href="https://en.wikipedia.org/wiki/Circuit_de_Barcelona-Catalunya">Wikipedia</a></button>
     <button class="buttons"><a href="https://fastestlaps.com/tracks/barcelona-catalunya-f1-post-2022">fastestlaps</a></button>
 </div>
