--- a/circuits/GillesVilleneuve.html
+++ b/circuits/GillesVilleneuve.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8">
     <title>Montreal</title>
-    <link rel="stylesheet" href="circuit.css">
+    <link rel="stylesheet" href="circuits/circuit.css">
 </head>
 <body>
 <h1>Circuit Gilles-Villeneuve (Montreal)</h1>
 <div class="CircuitSlot">
-    <img class="flag" src="../assets/img/Flag_of_Canada.png" alt="Canada Flag">
+    <img class="flag" src="assets/img/Flag_of_Canada.png" alt="Canada Flag">
     <button class="buttons"><a href="https://en.wikipedia.org/wiki/Circuit_Gilles_Villeneuve">Wikipedia</a></button>
     <button class="buttons"><a href="https://fastestlaps.com/tracks/circuit-gilles-villeneuve">fastestlaps</a></button>
 </div>
