--- a/circuits/Hungaroring.html
+++ b/circuits/Hungaroring.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8">
     <title>Hungaroring</title>
-    <link rel="stylesheet" href="circuit.css">
+    <link rel="stylesheet" href="circuits/circuit.css">
 </head>
 <body>
 <h1>Hungaroring</h1>
 <div class="CircuitSlot">
-    <img class="flag" src="../assets/img/Flag_of_Hungary.png" alt="Hungary Flag">
+    <img class="flag" src="assets/img/Flag_of_Hungary.png" alt="Hungary Flag">
     <button class="buttons"><a href="https://en.wikipedia.org/wiki/Hungaroring">Wikipedia</a></button>
     <button class="buttons"><a href="https://fastestlaps.com/tracks/hungaroring">fastestlaps</a></button>
 </div>
