--- a/circuits/Interlagos.html
+++ b/circuits/Interlagos.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8">
     <title>Interlagos</title>
-    <link rel="stylesheet" href="circuit.css">
+    <link rel="stylesheet" href="circuits/circuit.css">
 </head>
 <body>
 <h1>Autodromo José Carlos Pace (Interlagos)</h1>
 <div class="CircuitSlot">
-    <img class="flag" src="../assets/img/Flag_of_Brazil.png" alt="Brazil Flag">
+    <img class="flag" src="assets/img/Flag_of_Brazil.png" alt="Brazil Flag">
     <button class="buttons"><a href="https://en.wikipedia.org/wiki/Interlagos_Circuit">Wikipedia</a></button>
     <button class="buttons"><a href="https://fastestlaps.com/tracks/interlagos">fastestlaps</a></button>
 </div>
