--- a/circuits/Lusail.html
+++ b/circuits/Lusail.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8">
     <title>Lusail</title>
-    <link rel="stylesheet" href="circuit.css">
+    <link rel="stylesheet" href="circuits/circuit.css">
 </head>
 <body>
 <h1>Lusail International Circuit</h1>
 <div class="CircuitSlot">
-    <img class="flag" src="../assets/img/Flag_of_Qatar.png" alt="Qatar Flag">
+    <img class="flag" src="assets/img/Flag_of_Qatar.png" alt="Qatar Flag">
     <button class="buttons"><a href="https://en.wikipedia.org/wiki/Losail_International_Circuit">Wikipedia</a></button>
     <button class="buttons"><a href="https://fastestlaps.com/tracks/losail-international-circuit">fastestlaps</a></button>
 </div>
