--- a/circuits/Miami.html
+++ b/circuits/Miami.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8">
     <title>Miami</title>
-    <link rel="stylesheet" href="circuit.css">
+    <link rel="stylesheet" href="circuits/circuit.css">
 </head>
 <body>
 <h1>Miami International Autodrome</h1>
 <div class="CircuitSlot">
-    <img class="flag" src="../assets/img/Flag_of_the_United_States.png" alt="USA Flag">
+    <img class="flag" src="assets/img/Flag_of_the_United_States.png" alt="USA Flag">
     <button class="buttons"><a href="https://en.wikipedia.org/wiki/Miami_International_Autodrome">Wikipedia</a></button>
     <button class="buttons"><a href="https://fastestlaps.com/tracks/miami-international-autodrome">fastestlaps</a></button>
 </div>
