--- a/circuits/Monaco.html
+++ b/circuits/Monaco.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8">
     <title>Monaco</title>
-    <link rel="stylesheet" href="circuit.css">
+    <link rel="stylesheet" href="circuits/circuit.css">
 </head>
 <body>
 <h1>Circuit de Monaco</h1>
 <div class="CircuitSlot">
-    <img class="flag" src="../assets/img/Flag_of_Monaco.png" alt="Monaco Flag">
+    <img class="flag" src="assets/img/Flag_of_Monaco.png" alt="Monaco Flag">
     <button class="buttons"><a href="https://en.wikipedia.org/wiki/Circuit_de_Monaco">Wikipedia</a></button>
     <button class="buttons"><a href="https://fastestlaps.com/tracks/monaco-post-2014">fastestlaps</a></button>
 </div>
