--- a/circuits/Monza.html
+++ b/circuits/Monza.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8">
     <title>Monza</title>
-    <link rel="stylesheet" href="circuit.css">
+    <link rel="stylesheet" href="circuits/circuit.css">
 </head>
 <body>
 <h1>Autodromo Nazionale Monza</h1>
 <div class="CircuitSlot">
-    <img class="flag" src="../assets/img/Flag_of_Italy.png" alt="Italy Flag">
+    <img class="flag" src="assets/img/Flag_of_Italy.png" alt="Italy Flag">
     <button class="buttons"><a href="https://en.wikipedia.org/wiki/Monza_Circuit">Wikipedia</a></button>
     <button class="buttons"><a href="https://fastestlaps.com/tracks/monza">fastestlaps</a></button>
 </div>
