--- a/circuits/Spa.html
+++ b/circuits/Spa.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8">
     <title>Spa</title>
-    <link rel="stylesheet" href="circuit.css">
+    <link rel="stylesheet" href="circuits/circuit.css">
 </head>
 <body>
 <h1>Circuit de Spa-Francorchamps</h1>
 <div class="CircuitSlot">
-    <img class="flag" src="../assets/img/Flag_of_Belgium.png" alt="Belgium Flag">
+    <img class="flag" src="assets/img/Flag_of_Belgium.png" alt="Belgium Flag">
     <button class="buttons"><a href="https://en.wikipedia.org/wiki/Circuit_de_Spa-Francorchamps">Wikipedia</a></button>
     <button class="buttons"><a href="https://fastestlaps.com/tracks/spa-francorchamps">fastestlaps</a></button>
 </div>
