--- a/circuits/Zandvoort.html
+++ b/circuits/Zandvoort.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8">
     <title>Zandvoort</title>
-    <link rel="stylesheet" href="circuit.css">
+    <link rel="stylesheet" href="circuits/circuit.css">
 </head>
 <body>
 <h1>Circuit Zandvoort</h1>
 <div class="CircuitSlot">
-    <img class="flag" src="../assets/img/Flag_of_the_Netherlands.png" alt="Netherlands Flag">
+    <img class="flag" src="assets/img/Flag_of_the_Netherlands.png" alt="Netherlands Flag">
     <button class="buttons"><a href="https://en.wikipedia.org/wiki/Circuit_Zandvoort">Wikipedia</a></button>
     <button class="buttons"><a href="https://fastestlaps.com/tracks/zandvoort-gp-post-2019">fastestlaps</a></button>
 </div>
