circuits now flex-centered better button and links style regenetared new qr codes since the ones before are now blocked (pay account)

--- a/circuits/GillesVilleneuve.html
+++ b/circuits/GillesVilleneuve.html
@@ -6,11 +6,13 @@
     <link rel="stylesheet" href="circuits/circuit.css">
 </head>
 <body>
-<h1>Circuit Gilles-Villeneuve (Montreal)</h1>
-<div class="CircuitSlot">
-    <img class="flag" src="assets/img/Flag_of_Canada.png" alt="Canada Flag">
-    <button class="buttons"><a href="https://en.wikipedia.org/wiki/Circuit_Gilles_Villeneuve">Wikipedia</a></button>
-    <button class="buttons"><a href="https://fastestlaps.com/tracks/circuit-gilles-villeneuve">fastestlaps</a></button>
-</div>
+    <div id="circuitName">
+        <h1>Montreal</h1>
+    </div>
+    <div class="circuitSlot">
+        <img class="flag" src="../assets/img/Flag_of_Canada.png" alt="Canada Flag">
+        <button class="buttons"><a class="links" href="https://en.wikipedia.org/wiki/Circuit_Gilles_Villeneuve">Wikipedia</a></button>
+        <button class="buttons"><a class="links" href="https://fastestlaps.com/tracks/circuit-gilles-villeneuve">fastestlaps</a></button>
+    </div>
 </body>
 </html>
