--- a/circuits/Interlagos.html
+++ b/circuits/Interlagos.html
@@ -6,11 +6,13 @@
     <link rel="stylesheet" href="circuits/circuit.css">
 </head>
 <body>
-<h1>Autodromo José Carlos Pace (Interlagos)</h1>
-<div class="CircuitSlot">
-    <img class="flag" src="assets/img/Flag_of_Brazil.png" alt="Brazil Flag">
-    <button class="buttons"><a href="https://en.wikipedia.org/wiki/Interlagos_Circuit">Wikipedia</a></button>
-    <button class="buttons"><a href="https://fastestlaps.com/tracks/interlagos">fastestlaps</a></button>
-</div>
+    <div id="circuitName">
+        <h1>Interlagos</h1>
+    </div>
+    <div class="circuitSlot">
+        <img class="flag" src="../assets/img/Flag_of_Brazil.png" alt="Brazil Flag">
+        <button class="buttons"><a class="links" href="https://en.wikipedia.org/wiki/Interlagos_Circuit">Wikipedia</a></button>
+        <button class="buttons"><a class="links" href="https://fastestlaps.com/tracks/interlagos">fastestlaps</a></button>
+    </div>
 </body>
 </html>
