--- a/circuits/Jeddah.html
+++ b/circuits/Jeddah.html
@@ -2,15 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>SaudiArabia</title>
+    <title>Saudi Arabia</title>
     <link rel="stylesheet" href="circuits/circuit.css">
 </head>
 <body>
-    <h1>Jeddah Corniche Circuit</h1>
-    <div class="CircuitSlot">
-        <img class="flag" src="assets/img/Flag_of_Saudi_Arabia.png" alt="Saudi Arabia Flag">
-        <button class="buttons"><a href="https://en.wikipedia.org/wiki/Jeddah_Corniche_Circuit">Wikipedia</a></button>
-        <button class="buttons"><a href="https://fastestlaps.com/tracks/jeddah-corniche-circuit">fastestlaps</a></button>
+    <div id="circuitName">
+        <h1>Saudi Arabia</h1>
+    </div>
+    <div class="circuitSlot">
+        <img class="flag" src="../assets/img/Flag_of_Saudi_Arabia.png" alt="Saudi Arabia Flag">
+        <button class="buttons"><a class="links" href="https://en.wikipedia.org/wiki/Jeddah_Corniche_Circuit">Wikipedia</a></button>
+        <button class="buttons"><a class="links" href="https://fastestlaps.com/tracks/jeddah-corniche-circuit">fastestlaps</a></button>
     </div>
 </body>
 </html>
