--- a/circuits/Lusail.html
+++ b/circuits/Lusail.html
@@ -6,11 +6,13 @@
     <link rel="stylesheet" href="circuits/circuit.css">
 </head>
 <body>
-<h1>Lusail International Circuit</h1>
-<div class="CircuitSlot">
-    <img class="flag" src="assets/img/Flag_of_Qatar.png" alt="Qatar Flag">
-    <button class="buttons"><a href="https://en.wikipedia.org/wiki/Losail_International_Circuit">Wikipedia</a></button>
-    <button class="buttons"><a href="https://fastestlaps.com/tracks/losail-international-circuit">fastestlaps</a></button>
-</div>
+    <div id="circuitName">
+        <h1>Lusail</h1>
+    </div>
+    <div class="circuitSlot">
+        <img class="flag" src="../assets/img/Flag_of_Qatar.png" alt="Qatar Flag">
+        <button class="buttons"><a class="links" href="https://en.wikipedia.org/wiki/Losail_International_Circuit">Wikipedia</a></button>
+        <button class="buttons"><a class="links" href="https://fastestlaps.com/tracks/losail-international-circuit">fastestlaps</a></button>
+    </div>
 </body>
 </html>
