--- a/circuits/MarinaBay.html
+++ b/circuits/MarinaBay.html
@@ -6,11 +6,13 @@
     <link rel="stylesheet" href="circuits/circuit.css">
 </head>
 <body>
-<h1>Marina Bay Street Ciruit</h1>
-<div class="CircuitSlot">
-    <img class="flag" src="assets/img/Flag_of_Singapore.png" alt="Singapore Flag">
-    <button class="buttons"><a href="https://en.wikipedia.org/wiki/Marina_Bay_Street_Circuit">Wikipedia</a></button>
-    <button class="buttons"><a href="https://fastestlaps.com/tracks/marina-bay-post-2022">fastestlaps</a></button>
-</div>
+    <div id="circuitName">
+        <h1>Marina Bay</h1>
+    </div>
+    <div class="circuitSlot">
+        <img class="flag" src="../assets/img/Flag_of_Singapore.png" alt="Singapore Flag">
+        <button class="buttons"><a class="links" href="https://en.wikipedia.org/wiki/Marina_Bay_Street_Circuit">Wikipedia</a></button>
+        <button class="buttons"><a class="links" href="https://fastestlaps.com/tracks/marina-bay-post-2022">fastestlaps</a></button>
+    </div>
 </body>
 </html>
