--- a/circuits/RedBullRing.html
+++ b/circuits/RedBullRing.html
@@ -6,11 +6,13 @@
   <link rel="stylesheet" href="circuits/circuit.css">
 </head>
 <body>
-<h1>Red Bull Ring</h1>
-<div class="CircuitSlot">
-  <img class="flag" src="assets/img/Flag_of_Austria.png" alt="Austria Flag">
-  <button class="buttons"><a href="https://en.wikipedia.org/wiki/Red_Bull_Ring">Wikipedia</a></button>
-  <button class="buttons"><a href="https://fastestlaps.com/tracks/red-bull-ring">fastestlaps</a></button>
-</div>
+  <div id="circuitName">
+    <h1>Red Bull Ring</h1>
+  </div>
+  <div class="circuitSlot">
+    <img class="flag" src="../assets/img/Flag_of_Austria.png" alt="Austria Flag">
+    <button class="buttons"><a class="links" href="https://en.wikipedia.org/wiki/Red_Bull_Ring">Wikipedia</a></button>
+    <button class="buttons"><a class="links" href="https://fastestlaps.com/tracks/red-bull-ring">fastestlaps</a></button>
+  </div>
 </body>
 </html>
