--- a/index.html
+++ b/index.html
@@ -2,22 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>F1CircuitsWhiteBoard</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <header>
+    <header id="header">
         <h1>F1 Circuits White Board</h1>
         <p>Here you can see all the F1 circuits in the 2023 calendar along with its country flag and buttons to redirect you to some useful websites for info</p>
     </header>
     <main>
-        <div id="CircuitsList">
+        <div id="circuitsList">
             <section id="circuitsSlots">
             </section>
         </div>
     </main>
     <footer>
-        <p>Created by: <a href="https://piemh.github.io/PersonalSite/">Pietro Dondi</a></p>
+        <p>Created by: <a class="links" style="color: purple" href="https://piemh.github.io/PersonalSite/"><strong>Pietro Dondi</strong></a></p>
     </footer>
     <script src="main.js"></script>
 </body>
