--- a/circuits/AlbertPark.html
+++ b/circuits/AlbertPark.html
@@ -6,11 +6,13 @@
     <link rel="stylesheet" href="circuits/circuit.css">
 </head>
 <body>
-    <h1>Albert Park Circuit</h1>
-    <div class="CircuitSlot">
-        <img class="flag" src="assets/img/Flag_of_Australia.png" alt="Australia Flag">
-        <button class="buttons"><a href="https://en.wikipedia.org/wiki/Albert_Park_Circuit">Wikipedia</a></button>
-        <button class="buttons"><a href="https://fastestlaps.com/tracks/albert-park">fastestlaps</a></button>
+    <div id="circuitName">
+        <h1>Australia</h1>
+    </div>
+    <div class="circuitSlot">
+        <img class="flag" src="../assets/img/Flag_of_Australia.png" alt="Australia Flag">
+        <button class="buttons" role="button"><a class="links" href="https://en.wikipedia.org/wiki/Albert_Park_Circuit">Wikipedia</a></button>
+        <button class="buttons" role="button"><a class="links" href="https://fastestlaps.com/tracks/albert-park">fastestlaps</a></button>
     </div>
 </body>
 </html>
