--- a/circuits/Bahrain.html
+++ b/circuits/Bahrain.html
@@ -6,11 +6,13 @@
     <link rel="stylesheet" href="circuits/circuit.css">
 </head>
 <body>
-    <h1>Bahrain International Circuit</h1>
-    <div class="CircuitSlot">
-        <img class="flag" src="assets/img/Flag_of_Bahrain.png" alt="Bahrain Flag">
-        <button class="buttons"><a href="https://en.wikipedia.org/wiki/Bahrain_International_Circuit">Wikipedia</a></button>
-        <button class="buttons"><a href="https://fastestlaps.com/tracks/bahrain-international-circuit">fastestlaps</a></button>
+    <div id="circuitName">
+        <h1>Bahrain International Circuit</h1>
+    </div>
+    <div class="circuitSlot">
+        <img class="flag" src="../assets/img/Flag_of_Bahrain.png" alt="Bahrain Flag">
+        <button class="buttons"><a class="links" href="https://en.wikipedia.org/wiki/Bahrain_International_Circuit">Wikipedia</a></button>
+        <button class="buttons"><a class="links" href="https://fastestlaps.com/tracks/bahrain-international-circuit">fastestlaps</a></button>
     </div>
 </body>
 </html>
