--- a/circuits/Baku.html
+++ b/circuits/Baku.html
@@ -6,11 +6,13 @@
     <link rel="stylesheet" href="circuits/circuit.css">
 </head>
 <body>
-    <h1>Baku City Circuit</h1>
-    <div class="CircuitSlot">
-        <img class="flag" src="assets/img/Flag_of_Azerbaijan.png" alt="Azerbaijan Flag">
-        <button class="buttons"><a href="https://en.wikipedia.org/wiki/Baku_City_Circuit">Wikipedia</a></button>
-        <button class="buttons"><a href="https://fastestlaps.com/tracks/baku-city-circuit">fastestlaps</a></button>
+    <div id="circuitName">
+        <h1>Azerbaijan</h1>
+    </div>
+    <div class="circuitSlot">
+        <img class="flag" src="../assets/img/Flag_of_Azerbaijan.png" alt="Azerbaijan Flag">
+        <button class="buttons"><a class="links" href="https://en.wikipedia.org/wiki/Baku_City_Circuit">Wikipedia</a></button>
+        <button class="buttons"><a class="links" href="https://fastestlaps.com/tracks/baku-city-circuit">fastestlaps</a></button>
     </div>
 </body>
 </html>
