--- a/circuits/Barcelona.html
+++ b/circuits/Barcelona.html
@@ -6,11 +6,13 @@
     <link rel="stylesheet" href="circuits/circuit.css">
 </head>
 <body>
-<h1>Circuit de Barcelona-Catalunya</h1>
-<div class="CircuitSlot">
-    <img class="flag" src="assets/img/Flag_of_Spain.png" alt="Spain Flag">
-    <button class="buttons"><a href="https://en.wikipedia.org/wiki/Circuit_de_Barcelona-Catalunya">Wikipedia</a></button>
-    <button class="buttons"><a href="https://fastestlaps.com/tracks/barcelona-catalunya-f1-post-2022">fastestlaps</a></button>
-</div>
+    <div id="circuitName">
+        <h1>Barcelona</h1>
+    </div>
+    <div class="circuitSlot">
+        <img class="flag" src="../assets/img/Flag_of_Spain.png" alt="Spain Flag">
+        <button class="buttons"><a class="links" href="https://en.wikipedia.org/wiki/Circuit_de_Barcelona-Catalunya">Wikipedia</a></button>
+        <button class="buttons"><a class="links" href="https://fastestlaps.com/tracks/barcelona-catalunya-f1-post-2022">fastestlaps</a></button>
+    </div>
 </body>
 </html>
