--- a/circuits/Hungaroring.html
+++ b/circuits/Hungaroring.html
@@ -6,11 +6,13 @@
     <link rel="stylesheet" href="circuits/circuit.css">
 </head>
 <body>
-<h1>Hungaroring</h1>
-<div class="CircuitSlot">
-    <img class="flag" src="assets/img/Flag_of_Hungary.png" alt="Hungary Flag">
-    <button class="buttons"><a href="https://en.wikipedia.org/wiki/Hungaroring">Wikipedia</a></button>
-    <button class="buttons"><a href="https://fastestlaps.com/tracks/hungaroring">fastestlaps</a></button>
-</div>
+    <div id="circuitName">
+        <h1>Hungaroring</h1>
+    </div>
+    <div class="circuitSlot">
+        <img class="flag" src="../assets/img/Flag_of_Hungary.png" alt="Hungary Flag">
+        <button class="buttons"><a class="links" href="https://en.wikipedia.org/wiki/Hungaroring">Wikipedia</a></button>
+        <button class="buttons"><a class="links" href="https://fastestlaps.com/tracks/hungaroring">fastestlaps</a></button>
+    </div>
 </body>
 </html>
