--- a/circuits/Monaco.html
+++ b/circuits/Monaco.html
@@ -6,11 +6,13 @@
     <link rel="stylesheet" href="circuits/circuit.css">
 </head>
 <body>
-<h1>Circuit de Monaco</h1>
-<div class="CircuitSlot">
-    <img class="flag" src="assets/img/Flag_of_Monaco.png" alt="Monaco Flag">
-    <button class="buttons"><a href="https://en.wikipedia.org/wiki/Circuit_de_Monaco">Wikipedia</a></button>
-    <button class="buttons"><a href="https://fastestlaps.com/tracks/monaco-post-2014">fastestlaps</a></button>
-</div>
+    <div id="circuitName">
+        <h1>Monaco</h1>
+    </div>
+    <div class="circuitSlot">
+        <img class="flag" src="../assets/img/Flag_of_Monaco.png" alt="Monaco Flag">
+        <button class="buttons"><a class="links" href="https://en.wikipedia.org/wiki/Circuit_de_Monaco">Wikipedia</a></button>
+        <button class="buttons"><a class="links" href="https://fastestlaps.com/tracks/monaco-post-2014">fastestlaps</a></button>
+    </div>
 </body>
 </html>
