--- a/circuits/Monza.html
+++ b/circuits/Monza.html
@@ -6,11 +6,13 @@
     <link rel="stylesheet" href="circuits/circuit.css">
 </head>
 <body>
-<h1>Autodromo Nazionale Monza</h1>
-<div class="CircuitSlot">
-    <img class="flag" src="assets/img/Flag_of_Italy.png" alt="Italy Flag">
-    <button class="buttons"><a href="https://en.wikipedia.org/wiki/Monza_Circuit">Wikipedia</a></button>
-    <button class="buttons"><a href="https://fastestlaps.com/tracks/monza">fastestlaps</a></button>
-</div>
+    <div id="circuitName">
+        <h1>Monza</h1>
+    </div>
+    <div class="circuitSlot">
+        <img class="flag" src="../assets/img/Flag_of_Italy.png" alt="Italy Flag">
+        <button class="buttons"><a class="links" href="https://en.wikipedia.org/wiki/Monza_Circuit">Wikipedia</a></button>
+        <button class="buttons"><a class="links" href="https://fastestlaps.com/tracks/monza">fastestlaps</a></button>
+    </div>
 </body>
 </html>
