--- a/circuits/Silverstone.html
+++ b/circuits/Silverstone.html
@@ -6,11 +6,13 @@
     <link rel="stylesheet" href="circuits/circuit.css">
 </head>
 <body>
-<h1>Silverstone Circuit</h1>
-<div class="CircuitSlot">
-    <img class="flag" src="assets/img/Flag_of_the_United_Kingdom.png" alt="UK Flag">
-    <button class="buttons"><a href="https://en.wikipedia.org/wiki/Silverstone_Circuit">Wikipedia</a></button>
-    <button class="buttons"><a href="https://fastestlaps.com/tracks/silverstone-gp-post-2011">fastestlaps</a></button>
-</div>
+    <div id="circuitName">
+        <h1>Silverstone</h1>
+    </div>
+    <div class="circuitSlot">
+        <img class="flag" src="../assets/img/Flag_of_the_United_Kingdom.png" alt="UK Flag">
+        <button class="buttons"><a class="links" href="https://en.wikipedia.org/wiki/Silverstone_Circuit">Wikipedia</a></button>
+        <button class="buttons"><a class="links" href="https://fastestlaps.com/tracks/silverstone-gp-post-2011">fastestlaps</a></button>
+    </div>
 </body>
 </html>
