--- a/circuits/Spa.html
+++ b/circuits/Spa.html
@@ -6,11 +6,13 @@
     <link rel="stylesheet" href="circuits/circuit.css">
 </head>
 <body>
-<h1>Circuit de Spa-Francorchamps</h1>
-<div class="CircuitSlot">
-    <img class="flag" src="assets/img/Flag_of_Belgium.png" alt="Belgium Flag">
-    <button class="buttons"><a href="https://en.wikipedia.org/wiki/Circuit_de_Spa-Francorchamps">Wikipedia</a></button>
-    <button class="buttons"><a href="https://fastestlaps.com/tracks/spa-francorchamps">fastestlaps</a></button>
-</div>
+    <div id="circuitName">
+        <h1>Spa</h1>
+    </div>
+    <div class="circuitSlot">
+        <img class="flag" src="../assets/img/Flag_of_Belgium.png" alt="Belgium Flag">
+        <button class="buttons"><a class="links" href="https://en.wikipedia.org/wiki/Circuit_de_Spa-Francorchamps">Wikipedia</a></button>
+        <button class="buttons"><a class="links" href="https://fastestlaps.com/tracks/spa-francorchamps">fastestlaps</a></button>
+    </div>
 </body>
 </html>
