--- a/circuits/Suzuka.html
+++ b/circuits/Suzuka.html
@@ -6,11 +6,13 @@
     <link rel="stylesheet" href="circuits/circuit.css">
 </head>
 <body>
-<h1>Suzuka International Racing Course</h1>
-<div class="CircuitSlot">
-    <img class="flag" src="assets/img/Flag_of_Japan.png" alt="Japan Flag">
-    <button class="buttons"><a href="https://en.wikipedia.org/wiki/Suzuka_International_Racing_Course">Wikipedia</a></button>
-    <button class="buttons"><a href="https://fastestlaps.com/tracks/suzuka">fastestlaps</a></button>
-</div>
+    <div id="circuitName">
+        <h1>Suzuka</h1>
+    </div>
+    <div class="circuitSlot">
+        <img class="flag" src="../assets/img/Flag_of_Japan.png" alt="Japan Flag">
+        <button class="buttons"><a class="links" href="https://en.wikipedia.org/wiki/Suzuka_International_Racing_Course">Wikipedia</a></button>
+        <button class="buttons"><a class="links" href="https://fastestlaps.com/tracks/suzuka">fastestlaps</a></button>
+    </div>
 </body>
 </html>
