--- a/circuits/YasMarina.html
+++ b/circuits/YasMarina.html
@@ -6,11 +6,13 @@
     <link rel="stylesheet" href="circuits/circuit.css">
 </head>
 <body>
-<h1>Yas Marina Circuit</h1>
-<div class="CircuitSlot">
-    <img class="flag" src="assets/img/Flag_of_the_United_Arab_Emirates.png" alt="UAE Flag">
-    <button class="buttons"><a href="https://en.wikipedia.org/wiki/Yas_Marina_Circuit">Wikipedia</a></button>
-    <button class="buttons"><a href="https://fastestlaps.com/tracks/yas-marina-post-2021">fastestlaps</a></button>
-</div>
+    <div id="circuitName">
+        <h1>Yas Marina</h1>
+    </div>
+    <div class="circuitSlot">
+        <img class="flag" src="../assets/img/Flag_of_the_United_Arab_Emirates.png" alt="UAE Flag">
+        <button class="buttons"><a class="links" href="https://en.wikipedia.org/wiki/Yas_Marina_Circuit">Wikipedia</a></button>
+        <button class="buttons"><a class="links" href="https://fastestlaps.com/tracks/yas-marina-post-2021">fastestlaps</a></button>
+    </div>
 </body>
 </html>
