--- a/circuits/Zandvoort.html
+++ b/circuits/Zandvoort.html
@@ -6,11 +6,13 @@
     <link rel="stylesheet" href="circuits/circuit.css">
 </head>
 <body>
-<h1>Circuit Zandvoort</h1>
-<div class="CircuitSlot">
-    <img class="flag" src="assets/img/Flag_of_the_Netherlands.png" alt="Netherlands Flag">
-    <button class="buttons"><a href="https://en.wikipedia.org/wiki/Circuit_Zandvoort">Wikipedia</a></button>
-    <button class="buttons"><a href="https://fastestlaps.com/tracks/zandvoort-gp-post-2019">fastestlaps</a></button>
-</div>
+    <div id="circuitName">
+        <h1>Zandvoort</h1>
+    </div>
+    <div class="circuitSlot">
+        <img class="flag" src="../assets/img/Flag_of_the_Netherlands.png" alt="Netherlands Flag">
+        <button class="buttons"><a class="links" href="https://en.wikipedia.org/wiki/Circuit_Zandvoort">Wikipedia</a></button>
+        <button class="buttons"><a class="links" href="https://fastestlaps.com/tracks/zandvoort-gp-post-2019">fastestlaps</a></button>
+    </div>
 </body>
 </html>
