refix assets 404 fix a href tag not filling button space better buttons dimensions for phones, tablets, desktops, ultra-wide desktops

--- a/circuits/AlbertPark.html
+++ b/circuits/AlbertPark.html
@@ -10,7 +10,7 @@
         <h1>Australia</h1>
     </div>
     <div class="circuitSlot">
-        <img class="flag" src="../assets/img/Flag_of_Australia.png" alt="Australia Flag">
+        <img class="flag" src="assets/img/Flag_of_Australia.png" alt="Australia Flag">
         <button class="buttons" role="button"><a class="links" href="https://en.wikipedia.org/wiki/Albert_Park_Circuit">Wikipedia</a></button>
         <button class="buttons" role="button"><a class="links" href="https://fastestlaps.com/tracks/albert-park">fastestlaps</a></button>
     </div>
