--- a/circuits/Barcelona.html
+++ b/circuits/Barcelona.html
@@ -10,7 +10,7 @@
         <h1>Barcelona</h1>
     </div>
     <div class="circuitSlot">
-        <img class="flag" src="../assets/img/Flag_of_Spain.png" alt="Spain Flag">
+        <img class="flag" src="assets/img/Flag_of_Spain.png" alt="Spain Flag">
         <button class="buttons"><a class="links" href="https://en.wikipedia.org/wiki/Circuit_de_Barcelona-Catalunya">Wikipedia</a></button>
         <button class="buttons"><a class="links" href="https://fastestlaps.com/tracks/barcelona-catalunya-f1-post-2022">fastestlaps</a></button>
     </div>
