--- a/circuits/HermanosRodriguez.html
+++ b/circuits/HermanosRodriguez.html
@@ -10,7 +10,7 @@
         <h1>Hermanos Rodrìguez</h1>
     </div>
     <div class="circuitSlot">
-        <img class="flag" src="../assets/img/Flag_of_Mexico.png" alt="Mexico Flag">
+        <img class="flag" src="assets/img/Flag_of_Mexico.png" alt="Mexico Flag">
         <button class="buttons"><a class="links" href="https://en.wikipedia.org/wiki/Autódromo_Hermanos_Rodríguez">Wikipedia</a></button>
         <button class="buttons"><a class="links" href="https://fastestlaps.com/tracks/autdromo-hermanos-rodrguez-gp">fastestlaps</a></button>
     </div>
