--- a/circuits/LasVegas.html
+++ b/circuits/LasVegas.html
@@ -10,7 +10,7 @@
         <h1>Las Vegas</h1>
     </div>
     <div class="circuitSlot">
-        <img class="flag" src="../assets/img/Flag_of_the_United_States.png" alt="USA Flag">
+        <img class="flag" src="assets/img/Flag_of_the_United_States.png" alt="USA Flag">
         <button class="buttons"><a class="links" href="https://en.wikipedia.org/wiki/Las_Vegas_Grand_Prix#Circuit">Wikipedia</a></button>
         <button class="buttons"><a class="links" href="https://fastestlaps.com/tracks">fastestlaps</a></button>
     </div>
