--- a/circuits/Monaco.html
+++ b/circuits/Monaco.html
@@ -10,7 +10,7 @@
         <h1>Monaco</h1>
     </div>
     <div class="circuitSlot">
-        <img class="flag" src="../assets/img/Flag_of_Monaco.png" alt="Monaco Flag">
+        <img class="flag" src="assets/img/Flag_of_Monaco.png" alt="Monaco Flag">
         <button class="buttons"><a class="links" href="https://en.wikipedia.org/wiki/Circuit_de_Monaco">Wikipedia</a></button>
         <button class="buttons"><a class="links" href="https://fastestlaps.com/tracks/monaco-post-2014">fastestlaps</a></button>
     </div>
