--- a/circuits/Silverstone.html
+++ b/circuits/Silverstone.html
@@ -10,7 +10,7 @@
         <h1>Silverstone</h1>
     </div>
     <div class="circuitSlot">
-        <img class="flag" src="../assets/img/Flag_of_the_United_Kingdom.png" alt="UK Flag">
+        <img class="flag" src="assets/img/Flag_of_the_United_Kingdom.png" alt="UK Flag">
         <button class="buttons"><a class="links" href="https://en.wikipedia.org/wiki/Silverstone_Circuit">Wikipedia</a></button>
         <button class="buttons"><a class="links" href="https://fastestlaps.com/tracks/silverstone-gp-post-2011">fastestlaps</a></button>
     </div>
