--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
     </main>
     <footer>
-        <p>Created by: <a class="links" style="color: purple" href="https://piemh.github.io/PersonalSite/"><strong>Pietro Dondi</strong></a></p>
+        <p>Created by: <a style="color: purple; text-decoration: none;" href="https://piemh.github.io/PersonalSite/"><strong>Pietro Dondi</strong></a></p>
     </footer>
     <script src="main.js"></script>
 </body>
