--- a/circuits/Bahrain.html
+++ b/circuits/Bahrain.html
@@ -10,7 +10,7 @@
         <h1>Bahrain International Circuit</h1>
     </div>
     <div class="circuitSlot">
-        <img class="flag" src="../assets/img/Flag_of_Bahrain.png" alt="Bahrain Flag">
+        <img class="flag" src="assets/img/Flag_of_Bahrain.png" alt="Bahrain Flag">
         <button class="buttons"><a class="links" href="https://en.wikipedia.org/wiki/Bahrain_International_Circuit">Wikipedia</a></button>
         <button class="buttons"><a class="links" href="https://fastestlaps.com/tracks/bahrain-international-circuit">fastestlaps</a></button>
     </div>
