--- a/circuits/Baku.html
+++ b/circuits/Baku.html
@@ -10,7 +10,7 @@
         <h1>Azerbaijan</h1>
     </div>
     <div class="circuitSlot">
-        <img class="flag" src="../assets/img/Flag_of_Azerbaijan.png" alt="Azerbaijan Flag">
+        <img class="flag" src="assets/img/Flag_of_Azerbaijan.png" alt="Azerbaijan Flag">
         <button class="buttons"><a class="links" href="https://en.wikipedia.org/wiki/Baku_City_Circuit">Wikipedia</a></button>
         <button class="buttons"><a class="links" href="https://fastestlaps.com/tracks/baku-city-circuit">fastestlaps</a></button>
     </div>
