--- a/circuits/COTA.html
+++ b/circuits/COTA.html
@@ -10,7 +10,7 @@
         <h1>COTA</h1>
     </div>
     <div class="circuitSlot">
-        <img class="flag" src="../assets/img/Flag_of_the_United_States.png" alt="USA Flag">
+        <img class="flag" src="assets/img/Flag_of_the_United_States.png" alt="USA Flag">
         <button class="buttons"><a class="links" href="https://en.wikipedia.org/wiki/Circuit_of_the_Americas">Wikipedia</a></button>
         <button class="buttons"><a class="links" href="https://fastestlaps.com/tracks/circuit-of-the-americas">fastestlaps</a></button>
     </div>
