--- a/circuits/GillesVilleneuve.html
+++ b/circuits/GillesVilleneuve.html
@@ -10,7 +10,7 @@
         <h1>Montreal</h1>
     </div>
     <div class="circuitSlot">
-        <img class="flag" src="../assets/img/Flag_of_Canada.png" alt="Canada Flag">
+        <img class="flag" src="assets/img/Flag_of_Canada.png" alt="Canada Flag">
         <button class="buttons"><a class="links" href="https://en.wikipedia.org/wiki/Circuit_Gilles_Villeneuve">Wikipedia</a></button>
         <button class="buttons"><a class="links" href="https://fastestlaps.com/tracks/circuit-gilles-villeneuve">fastestlaps</a></button>
     </div>
