--- a/circuits/Hungaroring.html
+++ b/circuits/Hungaroring.html
@@ -10,7 +10,7 @@
         <h1>Hungaroring</h1>
     </div>
     <div class="circuitSlot">
-        <img class="flag" src="../assets/img/Flag_of_Hungary.png" alt="Hungary Flag">
+        <img class="flag" src="assets/img/Flag_of_Hungary.png" alt="Hungary Flag">
         <button class="buttons"><a class="links" href="https://en.wikipedia.org/wiki/Hungaroring">Wikipedia</a></button>
         <button class="buttons"><a class="links" href="https://fastestlaps.com/tracks/hungaroring">fastestlaps</a></button>
     </div>
