--- a/circuits/Imola.html
+++ b/circuits/Imola.html
@@ -10,7 +10,7 @@
         <h1>Imola</h1>
     </div>
     <div class="circuitSlot">
-        <img class="flag" src="../assets/img/Flag_of_Italy.png" alt="Italy Flag">
+        <img class="flag" src="assets/img/Flag_of_Italy.png" alt="Italy Flag">
         <button class="buttons"><a class="links" href="https://en.wikipedia.org/wiki/Imola_Circuit">Wikipedia</a></button>
         <button class="buttons"><a class="links" href="https://fastestlaps.com/tracks/imola-gp">fastestlaps</a></button>
     </div>
