--- a/circuits/Interlagos.html
+++ b/circuits/Interlagos.html
@@ -10,7 +10,7 @@
         <h1>Interlagos</h1>
     </div>
     <div class="circuitSlot">
-        <img class="flag" src="../assets/img/Flag_of_Brazil.png" alt="Brazil Flag">
+        <img class="flag" src="assets/img/Flag_of_Brazil.png" alt="Brazil Flag">
         <button class="buttons"><a class="links" href="https://en.wikipedia.org/wiki/Interlagos_Circuit">Wikipedia</a></button>
         <button class="buttons"><a class="links" href="https://fastestlaps.com/tracks/interlagos">fastestlaps</a></button>
     </div>
