--- a/circuits/Jeddah.html
+++ b/circuits/Jeddah.html
@@ -10,7 +10,7 @@
         <h1>Saudi Arabia</h1>
     </div>
     <div class="circuitSlot">
-        <img class="flag" src="../assets/img/Flag_of_Saudi_Arabia.png" alt="Saudi Arabia Flag">
+        <img class="flag" src="assets/img/Flag_of_Saudi_Arabia.png" alt="Saudi Arabia Flag">
         <button class="buttons"><a class="links" href="https://en.wikipedia.org/wiki/Jeddah_Corniche_Circuit">Wikipedia</a></button>
         <button class="buttons"><a class="links" href="https://fastestlaps.com/tracks/jeddah-corniche-circuit">fastestlaps</a></button>
     </div>
