--- a/circuits/Lusail.html
+++ b/circuits/Lusail.html
@@ -10,7 +10,7 @@
         <h1>Lusail</h1>
     </div>
     <div class="circuitSlot">
-        <img class="flag" src="../assets/img/Flag_of_Qatar.png" alt="Qatar Flag">
+        <img class="flag" src="assets/img/Flag_of_Qatar.png" alt="Qatar Flag">
         <button class="buttons"><a class="links" href="https://en.wikipedia.org/wiki/Losail_International_Circuit">Wikipedia</a></button>
         <button class="buttons"><a class="links" href="https://fastestlaps.com/tracks/losail-international-circuit">fastestlaps</a></button>
     </div>
