--- a/circuits/MarinaBay.html
+++ b/circuits/MarinaBay.html
@@ -10,7 +10,7 @@
         <h1>Marina Bay</h1>
     </div>
     <div class="circuitSlot">
-        <img class="flag" src="../assets/img/Flag_of_Singapore.png" alt="Singapore Flag">
+        <img class="flag" src="assets/img/Flag_of_Singapore.png" alt="Singapore Flag">
         <button class="buttons"><a class="links" href="https://en.wikipedia.org/wiki/Marina_Bay_Street_Circuit">Wikipedia</a></button>
         <button class="buttons"><a class="links" href="https://fastestlaps.com/tracks/marina-bay-post-2022">fastestlaps</a></button>
     </div>
