--- a/circuits/Monza.html
+++ b/circuits/Monza.html
@@ -10,7 +10,7 @@
         <h1>Monza</h1>
     </div>
     <div class="circuitSlot">
-        <img class="flag" src="../assets/img/Flag_of_Italy.png" alt="Italy Flag">
+        <img class="flag" src="assets/img/Flag_of_Italy.png" alt="Italy Flag">
         <button class="buttons"><a class="links" href="https://en.wikipedia.org/wiki/Monza_Circuit">Wikipedia</a></button>
         <button class="buttons"><a class="links" href="https://fastestlaps.com/tracks/monza">fastestlaps</a></button>
     </div>
