--- a/circuits/RedBullRing.html
+++ b/circuits/RedBullRing.html
@@ -10,7 +10,7 @@
     <h1>Red Bull Ring</h1>
   </div>
   <div class="circuitSlot">
-    <img class="flag" src="../assets/img/Flag_of_Austria.png" alt="Austria Flag">
+    <img class="flag" src="assets/img/Flag_of_Austria.png" alt="Austria Flag">
     <button class="buttons"><a class="links" href="https://en.wikipedia.org/wiki/Red_Bull_Ring">Wikipedia</a></button>
     <button class="buttons"><a class="links" href="https://fastestlaps.com/tracks/red-bull-ring">fastestlaps</a></button>
   </div>
