--- a/circuits/Spa.html
+++ b/circuits/Spa.html
@@ -10,7 +10,7 @@
         <h1>Spa</h1>
     </div>
     <div class="circuitSlot">
-        <img class="flag" src="../assets/img/Flag_of_Belgium.png" alt="Belgium Flag">
+        <img class="flag" src="assets/img/Flag_of_Belgium.png" alt="Belgium Flag">
         <button class="buttons"><a class="links" href="https://en.wikipedia.org/wiki/Circuit_de_Spa-Francorchamps">Wikipedia</a></button>
         <button class="buttons"><a class="links" href="https://fastestlaps.com/tracks/spa-francorchamps">fastestlaps</a></button>
     </div>
