--- a/circuits/Suzuka.html
+++ b/circuits/Suzuka.html
@@ -10,7 +10,7 @@
         <h1>Suzuka</h1>
     </div>
     <div class="circuitSlot">
-        <img class="flag" src="../assets/img/Flag_of_Japan.png" alt="Japan Flag">
+        <img class="flag" src="assets/img/Flag_of_Japan.png" alt="Japan Flag">
         <button class="buttons"><a class="links" href="https://en.wikipedia.org/wiki/Suzuka_International_Racing_Course">Wikipedia</a></button>
         <button class="buttons"><a class="links" href="https://fastestlaps.com/tracks/suzuka">fastestlaps</a></button>
     </div>
