--- a/circuits/YasMarina.html
+++ b/circuits/YasMarina.html
@@ -10,7 +10,7 @@
         <h1>Yas Marina</h1>
     </div>
     <div class="circuitSlot">
-        <img class="flag" src="../assets/img/Flag_of_the_United_Arab_Emirates.png" alt="UAE Flag">
+        <img class="flag" src="assets/img/Flag_of_the_United_Arab_Emirates.png" alt="UAE Flag">
         <button class="buttons"><a class="links" href="https://en.wikipedia.org/wiki/Yas_Marina_Circuit">Wikipedia</a></button>
         <button class="buttons"><a class="links" href="https://fastestlaps.com/tracks/yas-marina-post-2021">fastestlaps</a></button>
     </div>
