--- a/circuits/Zandvoort.html
+++ b/circuits/Zandvoort.html
@@ -10,7 +10,7 @@
         <h1>Zandvoort</h1>
     </div>
     <div class="circuitSlot">
-        <img class="flag" src="../assets/img/Flag_of_the_Netherlands.png" alt="Netherlands Flag">
+        <img class="flag" src="assets/img/Flag_of_the_Netherlands.png" alt="Netherlands Flag">
         <button class="buttons"><a class="links" href="https://en.wikipedia.org/wiki/Circuit_Zandvoort">Wikipedia</a></button>
         <button class="buttons"><a class="links" href="https://fastestlaps.com/tracks/zandvoort-gp-post-2019">fastestlaps</a></button>
     </div>
