--- a/circuits/Baku.html
+++ b/circuits/Baku.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Azerbaijan</title>
+    <title>Baku</title>
     <link rel="stylesheet" href="circuits/circuit.css">
 </head>
 <body>
     <div id="circuitName">
-        <h1>Azerbaijan</h1>
+        <h1>Baku City Circuit</h1>
     </div>
     <div class="circuitSlot">
         <img class="flag" src="assets/img/Flag_of_Azerbaijan.png" alt="Azerbaijan Flag">
