--- a/circuits/GillesVilleneuve.html
+++ b/circuits/GillesVilleneuve.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Montreal</title>
+    <title>GillesVilleneuve</title>
     <link rel="stylesheet" href="circuits/circuit.css">
 </head>
 <body>
     <div id="circuitName">
-        <h1>Montreal</h1>
+        <h1>Circuit Gilles Villeneuve</h1>
     </div>
     <div class="circuitSlot">
         <img class="flag" src="assets/img/Flag_of_Canada.png" alt="Canada Flag">
