--- a/circuits/Interlagos.html
+++ b/circuits/Interlagos.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="circuitName">
-        <h1>Interlagos</h1>
+        <h1>Interlagos Circuit</h1>
     </div>
     <div class="circuitSlot">
         <img class="flag" src="assets/img/Flag_of_Brazil.png" alt="Brazil Flag">
