--- a/circuits/MarinaBay.html
+++ b/circuits/MarinaBay.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Marina Bay</title>
+    <title>MarinaBay</title>
     <link rel="stylesheet" href="circuits/circuit.css">
 </head>
 <body>
     <div id="circuitName">
-        <h1>Marina Bay</h1>
+        <h1>Marina Bay Street Circuit</h1>
     </div>
     <div class="circuitSlot">
         <img class="flag" src="assets/img/Flag_of_Singapore.png" alt="Singapore Flag">
