--- a/circuits/Monaco.html
+++ b/circuits/Monaco.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="circuitName">
-        <h1>Monaco</h1>
+        <h1>Circuit de Monaco</h1>
     </div>
     <div class="circuitSlot">
         <img class="flag" src="assets/img/Flag_of_Monaco.png" alt="Monaco Flag">
