--- a/circuits/Suzuka.html
+++ b/circuits/Suzuka.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="circuitName">
-        <h1>Suzuka</h1>
+        <h1>Suzuka International Racing Course</h1>
     </div>
     <div class="circuitSlot">
         <img class="flag" src="assets/img/Flag_of_Japan.png" alt="Japan Flag">
