--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <header id="header">
+    <header>
         <h1>F1 Circuits White Board</h1>
-        <p>Here you can see all the F1 circuits in the 2023 calendar along with its country flag and buttons to redirect you to some useful websites for info</p>
+        <p>Here you can see all the F1 circuits in the <strong>2024</strong> calendar along with its country flag and buttons to redirect you to some useful websites for info</p>
     </header>
     <main>
         <div id="circuitsList">
