--- a/circuits/Barcelona.html
+++ b/circuits/Barcelona.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="circuitName">
-        <h1>Barcelona</h1>
+        <h1>Circuit de Barcelona-Catalunya</h1>
     </div>
     <div class="circuitSlot">
         <img class="flag" src="assets/img/Flag_of_Spain.png" alt="Spain Flag">
