--- a/circuits/COTA.html
+++ b/circuits/COTA.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="circuitName">
-        <h1>COTA</h1>
+        <h1>Circuit of the Americas (COTA)</h1>
     </div>
     <div class="circuitSlot">
         <img class="flag" src="assets/img/Flag_of_the_United_States.png" alt="USA Flag">
