--- a/circuits/HermanosRodriguez.html
+++ b/circuits/HermanosRodriguez.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="circuitName">
-        <h1>Hermanos Rodrìguez</h1>
+        <h1>Autódromo Hermanos Rodríguez</h1>
     </div>
     <div class="circuitSlot">
         <img class="flag" src="assets/img/Flag_of_Mexico.png" alt="Mexico Flag">
