--- a/circuits/Imola.html
+++ b/circuits/Imola.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="circuitName">
-        <h1>Imola</h1>
+        <h1>Autodromo Enzo e Dino Ferrari (Imola)</h1>
     </div>
     <div class="circuitSlot">
         <img class="flag" src="assets/img/Flag_of_Italy.png" alt="Italy Flag">
