--- a/circuits/Jeddah.html
+++ b/circuits/Jeddah.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="circuitName">
-        <h1>Saudi Arabia</h1>
+        <h1>Jeddah Corniche Circuit</h1>
     </div>
     <div class="circuitSlot">
         <img class="flag" src="assets/img/Flag_of_Saudi_Arabia.png" alt="Saudi Arabia Flag">
