--- a/circuits/LasVegas.html
+++ b/circuits/LasVegas.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     <div id="circuitName">
-        <h1>Las Vegas</h1>
+        <h1>Las Vegas Strip Circuit</h1>
     </div>
     <div class="circuitSlot">
         <img class="flag" src="assets/img/Flag_of_the_United_States.png" alt="USA Flag">
-        <button class="buttons"><a class="links" href="https://en.wikipedia.org/wiki/Las_Vegas_Grand_Prix#Circuit">Wikipedia</a></button>
-        <button class="buttons"><a class="links" href="https://fastestlaps.com/tracks">fastestlaps</a></button>
+        <button class="buttons"><a class="links" href="https://it.wikipedia.org/wiki/Las_Vegas_Strip_Circuit">Wikipedia</a></button>
+        <button class="buttons"><a class="links" href="https://fastestlaps.com/tracks/las-vegas-strip-circuit">fastestlaps</a></button>
     </div>
 </body>
 </html>
