--- a/circuits/Monza.html
+++ b/circuits/Monza.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="circuitName">
-        <h1>Monza</h1>
+        <h1>Autodromo Nazionale Monza</h1>
     </div>
     <div class="circuitSlot">
         <img class="flag" src="assets/img/Flag_of_Italy.png" alt="Italy Flag">
