--- a/circuits/Silverstone.html
+++ b/circuits/Silverstone.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="circuitName">
-        <h1>Silverstone</h1>
+        <h1>Silverstone Circuit</h1>
     </div>
     <div class="circuitSlot">
         <img class="flag" src="assets/img/Flag_of_the_United_Kingdom.png" alt="UK Flag">
