--- a/circuits/Spa.html
+++ b/circuits/Spa.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="circuitName">
-        <h1>Spa</h1>
+        <h1>Circuit de Spa-Francorchamps</h1>
     </div>
     <div class="circuitSlot">
         <img class="flag" src="assets/img/Flag_of_Belgium.png" alt="Belgium Flag">
