--- a/circuits/YasMarina.html
+++ b/circuits/YasMarina.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="circuitName">
-        <h1>Yas Marina</h1>
+        <h1>Yas Marina Circuit</h1>
     </div>
     <div class="circuitSlot">
         <img class="flag" src="assets/img/Flag_of_the_United_Arab_Emirates.png" alt="UAE Flag">
