--- a/circuits/Zandvoort.html
+++ b/circuits/Zandvoort.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="circuitName">
-        <h1>Zandvoort</h1>
+        <h1>Circuit Zandvoort</h1>
     </div>
     <div class="circuitSlot">
         <img class="flag" src="assets/img/Flag_of_the_Netherlands.png" alt="Netherlands Flag">
